# cxxsnippets

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
src/: algorithm.cpp  semantic_move.cpp
